--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/react": "^19.2.10",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.7.0",
     "gh-pages": "^6.3.0",
+    "typescript": "^5.9.3",
     "vite": "^4.5.14"
   },
   "homepage": "https://jeremyzarge.github.io/"
